Fixed Bug#11324: TIME_FORMAT using "%l:%i" returns 36:00 with 24:00:00 in TIME column